# generated/openapi/community-backend-api.openapi.json
@@ -1099,6 +1099,7 @@
           "memberCount",
           "postCount",
           "isPaid",
+          "isJoined",
           "tags",
           "priority",
           "enabled"
@@ -1165,6 +1166,9 @@
             "type": "integer"
           },
           "enabled": {
+            "type": "boolean"
+          },
+          "isJoined": {
             "type": "boolean"
           }
         }
